--- a/package.json
+++ b/package.json
@@ -24,5 +24,13 @@
   "bugs": {
     "url": "https://github.com/mnaughto/mmfga/issues"
   },
-  "homepage": "https://github.com/mnaughto/mmfga#readme"
+  "homepage": "https://github.com/mnaughto/mmfga#readme",
+  "dependencies": {
+    "async": "^2.1.4",
+    "jsonfile": "^2.4.0",
+    "lodash.foreach": "^4.5.0",
+    "mongodb": "^2.2.12",
+    "mongodb-fixture": "^1.0.0",
+    "yamljs": "^0.2.8"
+  }
 }
